# yolov3_dcn_nv_hackthon2021

./: .gitignore  README.md  build.sh
benchmark/: .infer_util.py.swp  create_paddle_quantization_data.py  infer.py  infer_util.py  trt_utils.py
bug_codes/build_slow/: Makefile  main.cpp  ssl_login_get_emb_1.cpp  ssl_login_get_emb_1.h
bug_codes/const_shape/: Makefile  main.cpp  test_1.cpp  test_1.h
bug_codes/dims_def/: Makefile  main.cpp  text_img_general_3.cpp  text_img_general_3.h
bug_codes/out_mismatch/ssha_correct/: main.cpp  ssha_1.cpp  ssha_1.h
bug_codes/out_mismatch/ssha_wrong/: Makefile  main.cpp  ssha_1.cpp
bug_codes/upsample_bilinear/: Makefile  fpn_1.cpp  fpn_1.h  main.cpp
docs/: 阿里安全AI平台_更新.docx  阿里安全AI平台路线安排.docx
evaluate/: coco_infer.py  trt_utils.py
evaluate/simple_test/: test_engine.py
network/engine_code/parse_onnx/: build_from_onnx.py
network/engine_code/yolov3_dcn_fp16/: main.cpp  yolov3_dcn_1.cpp  yolov3_dcn_1.h
network/engine_code/yolov3_dcn_fp32/: Makefile  build.sh  main.cpp  run_profile.sh  yolov3_dcn_1.cpp
network/engine_code/yolov3_dcn_int8/: main.cpp  yolov3_dcn_1.cpp  yolov3_dcn_1.h  yolov3_dcn_1.tensor_info
network/visualize/: compile.prototxt  optimize.prototxt  parse.prototxt
ops_lib/: CMakeLists.txt
ops_lib/kernel/: CMakeLists.txt
ops_lib/kernel/cpu/: cpu_math.cpp  cpu_math.h
ops_lib/kernel/gpu/: activate_kernel.cu  activate_kernel.h  conv_kernel.cu  conv_kernel.h  cu_device.cuh  cu_math.cu  cu_math.h  cu_utils.cpp  cu_utils.h  detect_kernel.cu  detect_kernel.h  embedding_kernel.cu  embedding_kernel.h  mask_kernel.cu  mask_kernel.h  nms_kernel.cu  nms_kernel.h  nonlinear_pred_box_kernel.cu  nonlinear_pred_box_kernel.h  normalize_kernel.cu  normalize_kernel.h  quantize_kernel.cu  quantize_kernel.cuh  quantize_kernel.h  recover_boxes_area_kernel.cu  recover_boxes_area_kernel.h  scatter_kernel.cu  scatter_kernel.h  trans_image_kernel.cu  trans_image_kernel.h  upsample_kernel.cu  upsample_kernel.h  yolo_box_kernel.cu  yolo_box_kernel.h
ops_lib/kernel/image/: face.cpp  face.h  image_math.cpp  image_math.h
ops_lib/tensorrt/: CMakeLists.txt  Makefile.config  bilinear_upsample.cpp  bilinear_upsample.h  deformable_conv.cpp  deformable_conv.h  delta2bbox.cpp  delta2bbox.h  embedding.cpp  embedding.h  find_trt_lib.cmake  gelu.cpp  gelu.h  group_norm.cpp  group_norm.h  layer_norm.cpp  layer_norm.h  leaky_relu.cpp  leaky_relu.h  mask.cpp  mask.h  multiclass_nms.cpp  multiclass_nms.h  nms.cpp  nms.h  nonlinear_pred_box.cpp  nonlinear_pred_box.h  recover_boxes_area.cpp  recover_boxes_area.h  scatter.cpp  scatter.h  trans_image.cpp  trans_image.h  trt_quantize.cpp  trt_quantize.h  trt_utils.cpp  trt_utils.h  yolo_box.cpp  yolo_box.h
ops_lib/util/: CMakeLists.txt  base.cpp  base.h  file_utils.h
