if(TensorRT_FOUND AND CUDA_FOUND)
  message(STATUS "<OPS_LIB> Building tensorrt ops under ${CMAKE_CURRENT_SOURCE_DIR}")
  include(find_trt_lib.cmake)
  AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} TRT_SRCS)
  cuda_add_library(ops_trt SHARED ${TRT_SRCS})
  target_include_directories(ops_trt PUBLIC ${CUDA_INCLUDE_DIRS} ${TensorRT_INCLUDE_DIRS})
  target_link_libraries(ops_trt ops_kernel_gpu ${TensorRT_LIBRARY} ${TensorRT_PLUGIN_LIBRARIES})
  install(TARGETS ops_trt DESTINATION lib)
else()
  message(STATUS "<OPS_LIB> Unable to find cuda or tensorrt, skip building tensorrt")
endif()
